--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,118 +1,347 @@
-@define-color rosewater #f4dbd6;
-@define-color flamingo #f0c6c6;
-@define-color pink #f5bde6;
-@define-color mauve #c6a0f6;
-@define-color red #ed8796;
-@define-color maroon #ee99a0;
-@define-color peach #f5a97f;
-@define-color yellow #eed49f;
-@define-color green #a6da95;
-@define-color teal #8bd5ca;
-@define-color sky #91d7e3;
-@define-color sapphire #7dc4e4;
-@define-color blue #8aadf4;
-@define-color lavender #b7bdf8;
-@define-color text #cad3f5;
-@define-color subtext1 #b8c0e0;
-@define-color subtext0 #a5adcb;
-@define-color overlay2 #939ab7;
-@define-color overlay1 #8087a2;
-@define-color overlay0 #6e738d;
-@define-color surface2 #5b6078;
-@define-color surface1 #494d64;
-@define-color surface0 #363a4f;
-@define-color base #24273a;
-@define-color mantle #1e2030;
-@define-color crust #181926;
-
-#waybar {
-  font-family: 'FiraCode NerdFont', sans-serif;
+* {
+  font-family: "JetBrainsMono Nerd Font";
+  font-weight: bold;
   font-size: 14px;
-  font-weight: 400;
-  color: @text;
-  background-color: @crust;
+  min-height: 0;
+  padding: 0;
+  border: none;
+  margin: 0;
 }
 
-/* Update the color gradient for active workspace */
+@import "theme.css";
+
+/* === Main Background === */
+
+window#waybar {
+  background: @main-bg;
+}
+
+/* === Drop Shadow === */
+
+window#waybar > box {
+  background-color: transparent;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 1);
+  margin: 2px;
+}
+
+/* === Tooltip === */
+
+tooltip {
+  background: @main-bg;
+  border: solid;
+  border-width: 1.5px;
+  border-radius: 8px;
+  border-color: @main-br;
+}
+tooltip label {
+  color: @main-fg;
+  font-weight: normal;
+  margin: -1.5px 3px;
+}
+
+/* === Workspace Buttons === */
+
+#workspaces button {
+  color: @module-fg;
+  border-radius: 6px;
+  box-shadow: none;
+  margin: 2px 0;
+  padding: 0 6px;
+  transition: none;
+}
+#workspaces button:hover {
+  color: @hover-fg;
+  background: @hover-bg;
+  text-shadow: none;
+  box-shadow: none;
+}
 #workspaces button.active {
-  border-radius: 3px;
-  color: @blue;
-  border: 2px solid transparent; /* We use a transparent border initially */
+  color: @active-fg;
+  background: @active-bg;
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.4);
+  margin: 2px;
+  padding: 0 6px;
 }
 
-.modules-right *{
-	margin-right: 10px;
+/* === General === */
+
+#custom-ws,
+#workspaces,
+#window,
+#temperature,
+#memory,
+#cpu,
+#clock,
+#network,
+#disk,
+#custom-update,
+#custom-media,
+#pulseaudio,
+#custom-backlight,
+#battery,
+#custom-power {
+  opacity: 1;
+  color: @module-fg;
+  margin-bottom: 0;
+  padding: 0 6px;
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
 }
 
-/* Example for other elements (modify as per your needs) */
-#mode, #clock, #disk, #cpu, #memory, #network, #pulseaudio, #temperature {
-  margin: 4px 2px;
-  padding: 5px;
-  border: 3px solid transparent; /* Transparent border */
-  background-color: @crust;
-  color: @text;
-  border-radius: 5px;
-  min-width: 20px;
-  background-color: @mantle;
+
+/* === Modules === */
+
+/* == Window Icon == */
+
+#custom-ws {
+  background: @main-bg;
 }
 
-/* Other example customization */
-#tray {
-  padding: 5px;
-  border-radius: 4px;
-  background-color: @base02;
-  border: 2px solid transparent;
-  background-color: @mantle
+/* == Workspaces == */
+
+#custom-left {
+  color: @workspaces;
+  background: @main-bg;
+  padding-left: 2px;
+}
+#workspaces {
+  background: @workspaces;
+}
+#custom-right {
+  color: @workspaces;
+  background: @main-bg;
+  text-shadow: 3px 0 2px rgba(0, 0, 0, 0.4);
 }
 
-#pulseaudio.muted {
-  color: @mantle;
+/* == Temperature == */
+
+#custom-paddc {
+  padding-right: 25px;
+}
+#custom-left {
+  color: @cpuinfo;
+  background: @main-bg;
+  padding-left: 3px;
+}
+#temperature {
+  background: @cpuinfo;
+  padding-left: 0px;
+  padding-right: 0;
 }
 
-#pulseaudio.bluetooth {
-  color: @mantle;
+/* == Memory == */
+
+#custom-left {
+  color: @memory;
+  background: @cpuinfo;
+  padding-left: 3px;
+}
+#memory {
+  background: @memory;
+  padding-left: 1px;
+  padding-right: 0;
+}
+#memory.warning {
+  color: @warning;
+}
+#memory.critical {
+  color: @critical;
+}
+
+/* == CPU == */
+
+#custom-left {
+  color: @cpu;
+  background: @memory;
+  padding-left: 3px;
+}
+#cpu {
+  background: @cpu;
+}
+#custom-leftin {
+  color: @cpu;
+  font-size: 12.2pt;
+  margin-bottom: -8px;
+}
+
+/* == Distro Icon == */
+
+#custom-left {
+  color: @distro-bg;
+  background: @main-bg;
+  text-shadow: -2px 0 2px rgba(0, 0, 0, 0.6);
+  padding-left: 3px;
+}
+#idle_inhibitor {
+  color: @distro-fg;
+  background: @distro-bg;
+  font-size: 11pt;
+  margin-right: -1px;
+  margin-bottom: -2px;
+  padding-right: 0;
+  padding-left: 3px;
+  text-shadow: 0 0 1.5px rgba(0, 0, 0, 1);
+}
+#custom-right {
+  color: @distro-bg;
+  background: @main-bg;
+}
+
+/* == Time == */
+
+#custom-rightin {
+  color: @time;
+  font-size: 12.2pt;
+  margin-bottom: -2px;
+}
+#clock.time {
+  background: @time;
+}
+#custom-right {
+  color: @time;
+  background: @date;
+}
+
+/* == Date == */
+
+#clock.date {
+  background: @date;
+}
+#clock.date:hover {
+  color: @hover-fg;
+  text-shadow: none;
+  box-shadow: none;
+}
+#custom-right {
+  color: @date;
+  background: @tray;
+}
+
+/* == Tray == */
+
+#network {
+  padding-left: 5px;
+  padding-right: 8px;
+  background: @tray;
+}
+#network:hover {
+  color: @hover-fg;
+  text-shadow: none;
+  box-shadow: none;
 }
 
 #disk {
-  color: @text;
-  background-color: @mantle;
+  padding-right: 5px;
+  background: @tray;
+}
+#disk:hover {
+  color: @hover-fg;
+  text-shadow: none;
+  box-shadow: none;
 }
 
-#cpu {
-  color: @text;
-  background-color: @mantle;
+#custom-update {
+  padding-right: 8px;
+  background: @tray;
+}
+#custom-update:hover {
+  color: @hover-fg;
+  text-shadow: none;
+  box-shadow: none;
+}
+#custom-right {
+  color: @tray;
+  background: @main-bg;
 }
 
-#memory {
-  color: @text;
+/* == Media Info == */
+
+#custom-media {
+  font-weight: normal;
+  background-color: @main-bg;
+  padding-right: 8px;
+  padding-left: 8px;
+}
+#custom-media:hover {
+  color: @hover-fg;
+  text-shadow: none;
+  box-shadow: none;
 }
 
-#temperature {
-  color: @text;
+/* == Output Device == */
+
+#custom-left {
+  color: @pulseaudio;
+  background: @main-bg;
+  padding-left: 3px;
+}
+#pulseaudio {
+  background: @pulseaudio;
+}
+#pulseaudio:hover {
+  color: @hover-fg;
+  text-shadow: none;
+  box-shadow: none;
 }
 
-#clock {
-  margin-left: 0px;
-  margin-right: 4px;
-  color: @text;
+/* == Brightness == */
+
+#custom-left {
+  color: @backlight;
+  background: @pulseaudio;
+  padding-left: 2px;
+}
+#custom-backlight {
+  background: @backlight;
 }
 
-/* Critical temperature styling */
-#temperature.critical {
-  border-color: @red;
-  background-color: #cc0a0a;
-  color: @text;
+/* == Battery == */
+
+#custom-left {
+  color: @battery;
+  background: @backlight;
+  padding-left: 2px;
+}
+#battery {
+  background: @battery;
+}
+#battery.full {
+  color: @full;
+}
+#battery.good {
+  color: @module-fg;
+}
+#battery.warning {
+  color: @warning;
+}
+#battery.critical {
+  color: @critical;
+}
+#battery.charging {
+  color: @charging;
 }
 
-#window {
-  font-size: 0.9em;
-  font-weight: 400;
-  font-family: sans-serif;
+/* == Power Button == */
+
+#custom-leftin {
+  color: @battery;
+  background: @main-bg;
+  font-size: 12.2pt;
+  margin-bottom: -2px;
 }
-
-#powermenu {
-	font-size: 18px;
+#custom-power {
+  color: @main-bg;
+  background: @power;
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
+  box-shadow: 1px 0 2px 1px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  margin: 2px 4px 2px 0;
+  padding-right: 6px;
+  padding-left: 9px;
 }
-
-
-
+#custom-power:hover {
+  color: @hover-fg;
+  background: @hover-bg;
+  text-shadow: none;
+  box-shadow: none;
+}
