--- a/.config/waybar/theme.css
+++ b/.config/waybar/theme.css
@@ -24,18 +24,20 @@
 @define-color module-fg       #f5e0dc;
 @define-color workspaces      #181825;
 
-@define-color cpuinfo         #181825;
-@define-color memory          #1e1e2e;
-@define-color cpu             #313244;
+@define-color network         #181825;
+@define-color temperature     #1e1e2e;
+@define-color memory          #313244;
 @define-color distro-fg       #000000;
 @define-color distro-bg       #9399b2;
+@define-color window          #181825;
+@define-color cpu             #1e1e2e;
+@define-color disk            #313244;
+@define-color battery         #181825;
+
 @define-color time            #313244;
 @define-color date            #1e1e2e;
 @define-color tray            #181825;
-
 @define-color pulseaudio      #181825;
-@define-color backlight       #1e1e2e;
-@define-color battery         #313244;
 @define-color power           #9399b2;
 
 /* State Colors */
