--- a/.config/leftwm/themes/dref/template.liquid
+++ b/.config/leftwm/themes/dref/template.liquid
@@ -4,7 +4,7 @@
 {% assign green = '%{F#3e8fb0}' %}
 {% assign yellow = '%{F#f3c177}' %}
 {% assign blue = '%{F#9ccfd8}' %}
-{% assign magenta = '%{F#c4a7e7}' %}
+{% assign magenta = '%{F#bf0fd6}' %}
 {% assign cyan = '%{F#ea9a97}' %}
 {% assign white = '%{F#e0def4}' %}
 {% assign close = '%{F-}' %}
@@ -12,19 +12,19 @@
 {% for tag in workspace.tags %}
 {% if tag.mine %}
 %{A1:leftwm command leftwm command "SendWorkspaceToTag {{workspace.index}} {{tag.index}}":}
-%{T2} {{ red }} {{tag.name}} {{ close }}
+%{T1} {{ red }} {{tag.name}} {{ close }}
 %{A}
 {% elsif tag.visible  %}
 %{A1:leftwm command leftwm command "SendWorkspaceToTag {{workspace.index}} {{tag.index}}":}
-%{T2} {{ black }} {{tag.name}} {{ close }}
+%{T1} {{ black }} {{tag.name}} {{ close }}
 %{A}
 {% elsif tag.busy  %}
 %{A1:leftwm command leftwm command "SendWorkspaceToTag {{workspace.index}} {{tag.index}}":}
-%{T2} {{ green }} {{tag.name}} {{ close }}
+%{T1} {{ green }} {{tag.name}} {{ close }}
 %{A}
 {% else %}
 %{A1:leftwm command leftwm command "SendWorkspaceToTag {{workspace.index}} {{tag.index}}":}
-%{T2} {{ white }} {{tag.name}} {{ close }}
+%{T1} {{ white }} {{tag.name}} {{ close }}
 %{A}
 {% endif %}
 {% endfor %}
