--- a/.config/waybar/theme.css
+++ b/.config/waybar/theme.css
@@ -1,49 +1,21 @@
-/* 
-  bg - background
-  fg - foreground
-  br - border
-*/
-
-/* Main Colors */
-
-@define-color main-fg         #cdd6f4;
-@define-color main-bg         #11111b;
-@define-color main-br         #cdd6f4;
+@define-color text       #f5e0dc;
+@define-color black         #0e0e1f;
+@define-color button-bg      #181825;
 
 @define-color active-bg       #9399b2;
-@define-color active-fg       #11111b;
-
 @define-color hover-bg        #313244;
 @define-color hover-fg        rgba(205, 214, 244, 0.75);
 
-@define-color white           #ffffff;
-@define-color black           #000000;
 
 /* Module Colors */
 
-@define-color module-fg       #f5e0dc;
-@define-color workspaces      #181825;
-
-@define-color network         #181825;
 @define-color temperature     #1e1e2e;
-@define-color memory          #313244;
-@define-color distro-fg       #000000;
-@define-color distro-bg       #9399b2;
-@define-color window          #181825;
-@define-color cpu             #1e1e2e;
-@define-color disk            #313244;
-@define-color battery         #181825;
-
-@define-color time            #313244;
-@define-color date            #1e1e2e;
-@define-color tray            #181825;
-@define-color pulseaudio      #181825;
-@define-color power           #9399b2;
 
 /* State Colors */
 
-@define-color good            #f5e0dc;
-@define-color warning         #f9e2af;
-@define-color critical        #f38ba8;
-@define-color full            #a6e3a1;
-@define-color charging        #cdd6f4;
+@define-color a        rgba(255,255,255,1.00);
+@define-color b        rgba(230,227,227,0.90);
+@define-color c        rgba(191,184,184,0.70);
+@define-color d        rgba(255,0,0,0.80);
+@define-color e        rgba(255,0,0,0.50);
+@define-color f        rgba(0,0,0,0.70);
